cabal-version:       2.4
name:                treap
version:             0.0.0
synopsis:            Efficient implementation of the treap data structure
description:         Efficient implementation of the treap data structure
homepage:            https://github.com/ChShersh/treap
bug-reports:         https://github.com/ChShersh/treap/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Dmitrii Kovanikov
maintainer:          kovanikov@gmail.com
copyright:           2019 Dmitrii Kovanikov
category:            Data Structure, Tree
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

source-repository head
  type:                git
  location:            https://github.com/ChShersh/treap.git


common common-options
  build-depends:       base >= 4.10.1.0 && < 4.13

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -Wpartial-fields
                       -fhide-source-paths
                       -freverse-errors

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications


library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Treap
                         Treap.Pretty
                         Treap.Pure


test-suite treap-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       treap


benchmark treap-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs

  build-depends:       gauge
                     , treap
